// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> create Select component 1`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="1"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="1"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 2`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="2"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select fd-select--compact"
        id="2"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 3`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="3"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="3"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control is-disabled"
        >
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down is-disabled fd-select__button"
            disabled={true}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 4`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="5"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="5"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control is-warning"
        >
          Default
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
        <div
          className="fd-form-message fd-form-message--warning"
        >
          Test validation state
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 5`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="4"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="4"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control is-error"
        >
          Default
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
        <div
          className="fd-form-message fd-form-message--error"
        >
          Test validation state
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 6`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="6"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="6"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control is-information"
        >
          Default
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
        <div
          className="fd-form-message fd-form-message--information"
        >
          Test validation state
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 7`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="7"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        id="7"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        uvalidationState={
          Object {
            "state": "success",
            "text": "Test validation state",
          }
        }
      >
        <div
          className="fd-select__control"
        >
          Default
          <button
            className="fd-button fd-button--transparent sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
